--- a/sass/utils.scss
+++ b/sass/utils.scss
@@ -7,16 +7,16 @@
     height: 0;
 }
 
-@mixin halign {
+@mixin halign($left: 0, $right: 0) {
     position: absolute;
     margin-left: auto; margin-right: auto;
-    left: 0; right: 0;
+    left: #{$left}; right: #{$right};
 }
 
-@mixin valign {
+@mixin valign($top: 0, $bottom: 0) {
     position: absolute;
     margin-top: auto; margin-bottom: auto;
-    top: -100%; bottom: -100%;
+    top: #{$top}; bottom: #{$bottom};
 }
 
 @mixin pseudo_img($path, $pseudo_class: "::before") {
